// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProductView stories snapshot > MissingImages story renders and matches snapshot 1`] = `
<div>
  <div
    class="section-container py-4"
  >
    <div
      class="grid grid-cols-1 lg:grid-cols-2 gap-4 lg:gap-12"
    >
      <div
        class="order-1"
      >
        <div
          class="aspect-square bg-muted flex items-center justify-center"
        >
          <div
            class="text-center text-muted-foreground"
          >
            <div
              class="text-4xl mb-2"
            >
              📷
            </div>
            <p>
              No image available
            </p>
          </div>
        </div>
        <details
          class="group border-b border-border mt-6"
          open=""
        >
          <summary
            class="flex items-center justify-between gap-4 py-4 text-base font-medium text-foreground cursor-pointer list-none [&::-webkit-details-marker]:hidden hover:bg-accent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-foreground transition-colors"
          >
            <span
              class="flex items-center gap-2"
            >
              Description:
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-5 shrink-0 translate-y-0.5 transition-transform duration-200 group-open:rotate-180"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </summary>
          <div
            class="pb-4"
          >
            <div
              class="text-sm text-foreground [&_ul]:flex [&_ul]:flex-col [&_ul]:gap-1.5 [&_ul]:list-none [&_ul]:m-0 [&_ul]:p-0 [&_li]:flex [&_li]:items-center [&_li]:gap-2 [&_li]:before:content-[''] [&_li]:before:h-1.5 [&_li]:before:w-1.5 [&_li]:before:flex-shrink-0 [&_li]:before:rounded-full [&_li]:before:bg-foreground"
              data-testid="html-fragment"
            >
              <ul>
                <li>
                  Grain deerskin leather
                </li>
                <li>
                  Water resistant and durable
                </li>
                <li>
                  Outseam machine sewn
                </li>
              </ul>
            </div>
          </div>
        </details>
      </div>
      <div
        class="order-2"
      >
        <div
          class="relative grid gap-4"
        >
          <div
            class="flex items-start justify-between gap-4"
          >
            <div
              class="sm:pr-20 min-w-0"
            >
              <h1
                class="text-3xl font-bold text-card-foreground tracking-tight break-words"
                data-testid="product-title"
              >
                Men's Classic Deer Gloves
              </h1>
              <p
                class="mt-2 text-xs leading-none text-secondary-foreground"
              >
                SKU:
                 
                061492183589M
              </p>
              <p
                class="mt-2 text-base font-normal leading-6 text-accent-foreground"
              >
                These simple, stylish gloves have a great look and feel, with outseam construction for rugged character and select deerskin leather for premium quality. The fleece lining provides essential winter warmth, with a lightly tailored cuff for extra protection – featuring a Commerce Cloud grommet button for detail. A classic glove for men.
              </p>
            </div>
          </div>
          <div
            class="sm:absolute sm:top-0 sm:right-0 flex items-center gap-2 z-10"
          >
            <button
              aria-label="Add to Wishlist"
              class="absolute top-2 right-2 z-10 w-9 h-9 p-2 shadow-md flex items-center justify-center rounded-ui transition-all duration-200 ease-in-out cursor-pointer focus:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-60 disabled:cursor-not-allowed !static border border-border bg-background/90 hover:border-muted-foreground/50 hover:bg-background"
            >
              <svg
                aria-hidden="true"
                class="w-4 h-4 transition-all duration-200 ease-in-out text-muted-foreground scale-100"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
                viewBox="0 0 24 24"
              >
                <path
                  d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"
                />
              </svg>
            </button>
            <button
              aria-label="Share"
              class="w-9 h-9 p-2 shadow-md flex items-center justify-center rounded-ui transition-all duration-200 ease-in-out cursor-pointer focus:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 !static border border-border bg-background/90 hover:bg-background hover:border-muted-foreground/50 [&_svg]:stroke-[2]"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="w-4 h-4 text-muted-foreground transition-all duration-200 ease-in-out"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
                viewBox="0 0 24 24"
              >
                <path
                  d="M4 12v8a2 2 0 002 2h12a2 2 0 002-2v-8"
                />
                <polyline
                  points="16 6 12 2 8 6"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="2"
                  y2="15"
                />
              </svg>
            </button>
          </div>
          <div
            class="relative mt-2 inline-block"
          >
            <div
              aria-controls="radix-_r_e_"
              aria-haspopup="dialog"
              class="relative inline-block"
              data-slot="popover-trigger"
              data-state="closed"
              type="button"
            >
              <div
                class="flex items-center gap-2"
              >
                <div
                  class="flex flex-col gap-1"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    <div
                      aria-label="0 out of 5 stars, 0 reviews"
                      class="flex items-center gap-0.5"
                      role="group"
                    >
                      <svg
                        aria-hidden="true"
                        class="shrink-0 w-4 h-4"
                        viewBox="0 0 20 20"
                      >
                        <path
                          d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                          fill="white"
                          stroke="var(--color-border-subtle)"
                          stroke-width="1"
                        />
                      </svg>
                      <svg
                        aria-hidden="true"
                        class="shrink-0 w-4 h-4"
                        viewBox="0 0 20 20"
                      >
                        <path
                          d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                          fill="white"
                          stroke="var(--color-border-subtle)"
                          stroke-width="1"
                        />
                      </svg>
                      <svg
                        aria-hidden="true"
                        class="shrink-0 w-4 h-4"
                        viewBox="0 0 20 20"
                      >
                        <path
                          d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                          fill="white"
                          stroke="var(--color-border-subtle)"
                          stroke-width="1"
                        />
                      </svg>
                      <svg
                        aria-hidden="true"
                        class="shrink-0 w-4 h-4"
                        viewBox="0 0 20 20"
                      >
                        <path
                          d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                          fill="white"
                          stroke="var(--color-border-subtle)"
                          stroke-width="1"
                        />
                      </svg>
                      <svg
                        aria-hidden="true"
                        class="shrink-0 w-4 h-4"
                        viewBox="0 0 20 20"
                      >
                        <path
                          d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                          fill="white"
                          stroke="var(--color-border-subtle)"
                          stroke-width="1"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="space-y-3"
          >
            <div
              class="items-center gap-2"
            >
              <span
                aria-hidden="true"
                class="[&:not(:first-child)]:mt-6 text-left text-2xl font-bold text-card-foreground leading-[120%] tracking-[-0.6px]"
              >
                £99.99
              </span>
              <span
                aria-atomic="true"
                aria-live="polite"
                class="sr-only"
              >
                Men's Classic Deer Gloves
                 
                Current price: £99.99
              </span>
               
            </div>
          </div>
          <div
            aria-atomic="true"
            class="flex items-center gap-2"
            data-slot="inventory-message"
            role="status"
          >
            <span
              aria-hidden="true"
              class="h-2 w-2 shrink-0 rounded-full bg-current text-status-positive"
            />
            <p
              class="text-sm font-medium text-status-positive"
            >
              <span
                class="sr-only"
              >
                Available: 
              </span>
              In stock
            </p>
          </div>
          <div
            class="space-y-3"
          >
            <div
              aria-labelledby="swatch-group-label-_r_k_"
              class="inline-flex flex-col gap-3"
              role="radiogroup"
            >
              <div
                class="flex items-center gap-2 text-base font-semibold leading-6 text-card-foreground"
                id="swatch-group-label-_r_k_"
              >
                <span>
                  Size
                  :
                </span>
                <span>
                  L
                </span>
              </div>
              <div
                class="inline-flex flex-wrap gap-2 focus:outline-none bg-swatch-group-bg p-1"
                data-slot="swatch-container"
              >
                <a
                  aria-checked="false"
                  aria-label="M"
                  class="flex-shrink-0 relative group transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 min-w-8 min-h-8 px-3 py-1 cursor-pointer !w-auto !h-auto !min-w-[var(--swatch-labeled-min-size)] !min-h-[var(--swatch-labeled-min-size)] !p-[var(--swatch-labeled-padding)] bg-swatch-bg border border-swatch-border text-swatch-text shadow-2xs hover:border-[var(--swatch-color-border-hover,transparent)]"
                  data-labeled="true"
                  data-swatch-type="label"
                  href="/RefArchGlobal/en-GB/?accessorySize=050"
                  position="relative"
                  role="radio"
                  tabindex="-1"
                >
                  <div
                    class="flex items-center justify-center w-full h-full text-sm font-medium leading-5"
                    data-slot="swatch-content"
                  >
                    <span
                      class="text-xs font-medium"
                    >
                      M
                    </span>
                  </div>
                </a>
                <a
                  aria-checked="true"
                  aria-label="L"
                  class="flex-shrink-0 relative group transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 min-w-8 min-h-8 px-3 py-1 cursor-pointer !w-auto !h-auto !min-w-[var(--swatch-labeled-min-size)] !min-h-[var(--swatch-labeled-min-size)] !p-[var(--swatch-labeled-padding)] bg-swatch-bg-selected border border-swatch-border-selected text-swatch-text-selected shadow-2xs"
                  data-labeled="true"
                  data-swatch-type="label"
                  href="/RefArchGlobal/en-GB/?accessorySize=060"
                  position="relative"
                  role="radio"
                  tabindex="0"
                >
                  <div
                    class="flex items-center justify-center w-full h-full text-sm font-medium leading-5"
                    data-slot="swatch-content"
                  >
                    <span
                      class="text-xs font-medium"
                    >
                      L
                    </span>
                  </div>
                </a>
                <a
                  aria-checked="false"
                  aria-label="XL"
                  class="flex-shrink-0 relative group transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 min-w-8 min-h-8 px-3 py-1 cursor-pointer !w-auto !h-auto !min-w-[var(--swatch-labeled-min-size)] !min-h-[var(--swatch-labeled-min-size)] !p-[var(--swatch-labeled-padding)] bg-swatch-bg border border-swatch-border text-swatch-text shadow-2xs hover:border-[var(--swatch-color-border-hover,transparent)]"
                  data-labeled="true"
                  data-swatch-type="label"
                  href="/RefArchGlobal/en-GB/?accessorySize=080"
                  position="relative"
                  role="radio"
                  tabindex="-1"
                >
                  <div
                    class="flex items-center justify-center w-full h-full text-sm font-medium leading-5"
                    data-slot="swatch-content"
                  >
                    <span
                      class="text-xs font-medium"
                    >
                      XL
                    </span>
                  </div>
                </a>
              </div>
            </div>
          </div>
          <div
            class="mt-6"
          >
            <div
              class="space-y-4"
            >
              <div
                class="w-full"
              >
                <div
                  aria-required="false"
                  class="grid grid-cols-2 gap-2"
                  data-slot="radio-group"
                  data-testid="delivery-option-select"
                  dir="ltr"
                  role="radiogroup"
                  style="outline: none;"
                  tabindex="0"
                >
                  <label
                    class="text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-start gap-2 rounded-ui p-3 border transition-colors text-left shadow-xs cursor-pointer border-muted-foreground/20 hover:border-primary/50"
                    data-slot="label"
                    for="delivery-option-061492183589M"
                  >
                    <button
                      aria-checked="false"
                      class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-ui transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 sr-only"
                      data-radix-collection-item=""
                      data-slot="radio-group-item"
                      data-state="unchecked"
                      id="delivery-option-061492183589M"
                      role="radio"
                      tabindex="-1"
                      type="button"
                      value="delivery"
                    />
                    <div
                      class="mt-0.5 shrink-0"
                    >
                      <div
                        class="w-4 h-4 border-2 flex items-center justify-center transition-colors border-muted-foreground/20"
                      />
                    </div>
                    <div
                      class="flex-1 min-w-0"
                    >
                      <div
                        class="flex flex-col"
                      >
                        <span
                          class="text-sm font-medium leading-none text-foreground"
                        >
                          Deliver to
                        </span>
                        <p
                          class="text-xs font-normal leading-4 tracking-[0.12px] text-muted-foreground mt-0.5"
                        >
                          Enter ZIP code to see delivery estimate
                        </p>
                      </div>
                    </div>
                  </label>
                  <label
                    class="text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-start gap-2 rounded-ui p-3 border transition-colors text-left shadow-xs border-muted-foreground/20 hover:border-primary/50 opacity-50 cursor-not-allowed"
                    data-slot="label"
                    for="pickup-option-061492183589M"
                  >
                    <button
                      aria-checked="false"
                      class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-ui transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 sr-only"
                      data-disabled=""
                      data-radix-collection-item=""
                      data-slot="radio-group-item"
                      data-state="unchecked"
                      disabled=""
                      id="pickup-option-061492183589M"
                      role="radio"
                      tabindex="-1"
                      type="button"
                      value="pickup"
                    />
                    <div
                      class="mt-0.5 shrink-0"
                    >
                      <div
                        class="w-4 h-4 border-2 flex items-center justify-center transition-colors border-muted-foreground/20"
                      />
                    </div>
                    <div
                      class="flex-1 min-w-0"
                    >
                      <div
                        class="flex flex-col"
                      >
                        <span
                          class="text-sm font-medium leading-none text-foreground"
                        >
                          Pickup unavailable at
                        </span>
                        <div
                          class="mt-0.5"
                        >
                          <button
                            class="text-xs text-primary hover:underline cursor-pointer"
                            type="button"
                          />
                          <p
                            class="text-xs font-normal text-destructive mt-1"
                          >
                            Try another store
                          </p>
                        </div>
                      </div>
                    </div>
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            class="space-y-2"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-base font-semibold leading-6 text-card-foreground"
              data-slot="label"
              for="quantity-_r_n_"
            >
              Quantity
            </label>
            <div
              aria-label="Quantity for Men's Classic Deer Gloves"
              class="inline-flex items-center border border-input rounded-ui overflow-hidden"
              role="group"
            >
              <button
                aria-label="Decrement Quantity for Men's Classic Deer Gloves"
                class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus-visible:outline-2 focus-visible:outline-offset-[-2px] disabled:opacity-50 disabled:cursor-not-allowed"
                data-testid="quantity-decrement"
                disabled=""
              >
                −
              </button>
              <input
                class="w-9 min-w-[2ch] text-center text-sm font-semibold leading-normal text-foreground border-0 bg-transparent focus-visible:outline-2 focus-visible:outline-offset-[-2px] disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
                id="quantity-_r_n_"
                min="1"
                step="1"
                type="number"
                value="1"
              />
              <button
                aria-label="Increment Quantity for Men's Classic Deer Gloves"
                class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus-visible:outline-2 focus-visible:outline-offset-[-2px] disabled:opacity-50 disabled:cursor-not-allowed"
                data-testid="quantity-increment"
              >
                +
              </button>
            </div>
          </div>
        </div>
        <div
          class="mt-6"
        >
          <div
            aria-atomic="true"
            role="status"
          />
          <div
            class="flex flex-col gap-3"
          >
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-10 rounded-ui px-6 has-[>svg]:px-4 w-full text-base font-semibold leading-6"
              data-size="lg"
              data-slot="add-to-cart-button"
              data-testid="add-to-cart"
              data-variant="default"
            >
              Add to Cart
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductView stories snapshot > OutOfStock story renders and matches snapshot 1`] = `
<div>
  <div
    class="section-container py-4"
  >
    <div
      class="grid grid-cols-1 lg:grid-cols-2 gap-4 lg:gap-12"
    >
      <div
        class="order-1"
      >
        <div
          class="space-y-4"
        >
          <div
            class="relative aspect-square overflow-hidden bg-muted"
            data-gallery-hero="true"
          >
            <div
              class="w-full h-full object-cover object-center [&_img]:object-contain! [&_img]:h-full! [&_img]:max-w-full! [&_img]:mx-auto!"
            >
              <picture>
                <source
                  media="(min-width: 1536px)"
                  sizes="680px"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70&sw=680 680w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70&sw=1360 1360w"
                  type="image/webp"
                />
                <source
                  media="(min-width: 1280px)"
                  sizes="50vw"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70&sw=768 768w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70&sw=1536 1536w"
                  type="image/webp"
                />
                <source
                  media="(min-width: 1024px)"
                  sizes="50vw"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70&sw=640 640w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70&sw=1280 1280w"
                  type="image/webp"
                />
                <source
                  media="(min-width: 768px)"
                  sizes="100vw"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70&sw=1024 1024w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70&sw=2048 2048w"
                  type="image/webp"
                />
                <source
                  media="(min-width: 640px)"
                  sizes="100vw"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70&sw=768 768w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70&sw=1536 1536w"
                  type="image/webp"
                />
                <source
                  sizes="100vw"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70&sw=640 640w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70&sw=1280 1280w"
                  type="image/webp"
                />
                <img
                  alt="Men's Classic Deer Gloves, , large"
                  class="object-cover"
                  fetchpriority="high"
                  loading="eager"
                  src="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70"
                />
              </picture>
            </div>
          </div>
        </div>
        <details
          class="group border-b border-border mt-6"
          open=""
        >
          <summary
            class="flex items-center justify-between gap-4 py-4 text-base font-medium text-foreground cursor-pointer list-none [&::-webkit-details-marker]:hidden hover:bg-accent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-foreground transition-colors"
          >
            <span
              class="flex items-center gap-2"
            >
              Description:
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-5 shrink-0 translate-y-0.5 transition-transform duration-200 group-open:rotate-180"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </summary>
          <div
            class="pb-4"
          >
            <div
              class="text-sm text-foreground [&_ul]:flex [&_ul]:flex-col [&_ul]:gap-1.5 [&_ul]:list-none [&_ul]:m-0 [&_ul]:p-0 [&_li]:flex [&_li]:items-center [&_li]:gap-2 [&_li]:before:content-[''] [&_li]:before:h-1.5 [&_li]:before:w-1.5 [&_li]:before:flex-shrink-0 [&_li]:before:rounded-full [&_li]:before:bg-foreground"
              data-testid="html-fragment"
            >
              <ul>
                <li>
                  Grain deerskin leather
                </li>
                <li>
                  Water resistant and durable
                </li>
                <li>
                  Outseam machine sewn
                </li>
              </ul>
            </div>
          </div>
        </details>
      </div>
      <div
        class="order-2"
      >
        <div
          class="relative grid gap-4"
        >
          <div
            class="flex items-start justify-between gap-4"
          >
            <div
              class="sm:pr-20 min-w-0"
            >
              <h1
                class="text-3xl font-bold text-card-foreground tracking-tight break-words"
                data-testid="product-title"
              >
                Men's Classic Deer Gloves
              </h1>
              <p
                class="mt-2 text-xs leading-none text-secondary-foreground"
              >
                SKU:
                 
                061492183589M
              </p>
              <p
                class="mt-2 text-base font-normal leading-6 text-accent-foreground"
              >
                These simple, stylish gloves have a great look and feel, with outseam construction for rugged character and select deerskin leather for premium quality. The fleece lining provides essential winter warmth, with a lightly tailored cuff for extra protection – featuring a Commerce Cloud grommet button for detail. A classic glove for men.
              </p>
            </div>
          </div>
          <div
            class="sm:absolute sm:top-0 sm:right-0 flex items-center gap-2 z-10"
          >
            <button
              aria-label="Add to Wishlist"
              class="absolute top-2 right-2 z-10 w-9 h-9 p-2 shadow-md flex items-center justify-center rounded-ui transition-all duration-200 ease-in-out cursor-pointer focus:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-60 disabled:cursor-not-allowed !static border border-border bg-background/90 hover:border-muted-foreground/50 hover:bg-background"
            >
              <svg
                aria-hidden="true"
                class="w-4 h-4 transition-all duration-200 ease-in-out text-muted-foreground scale-100"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
                viewBox="0 0 24 24"
              >
                <path
                  d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"
                />
              </svg>
            </button>
            <button
              aria-label="Share"
              class="w-9 h-9 p-2 shadow-md flex items-center justify-center rounded-ui transition-all duration-200 ease-in-out cursor-pointer focus:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 !static border border-border bg-background/90 hover:bg-background hover:border-muted-foreground/50 [&_svg]:stroke-[2]"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="w-4 h-4 text-muted-foreground transition-all duration-200 ease-in-out"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
                viewBox="0 0 24 24"
              >
                <path
                  d="M4 12v8a2 2 0 002 2h12a2 2 0 002-2v-8"
                />
                <polyline
                  points="16 6 12 2 8 6"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="2"
                  y2="15"
                />
              </svg>
            </button>
          </div>
          <div
            class="relative mt-2 inline-block"
          >
            <div
              aria-controls="radix-_r_q_"
              aria-haspopup="dialog"
              class="relative inline-block"
              data-slot="popover-trigger"
              data-state="closed"
              type="button"
            >
              <div
                class="flex items-center gap-2"
              >
                <div
                  class="flex flex-col gap-1"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    <div
                      aria-label="0 out of 5 stars, 0 reviews"
                      class="flex items-center gap-0.5"
                      role="group"
                    >
                      <svg
                        aria-hidden="true"
                        class="shrink-0 w-4 h-4"
                        viewBox="0 0 20 20"
                      >
                        <path
                          d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                          fill="white"
                          stroke="var(--color-border-subtle)"
                          stroke-width="1"
                        />
                      </svg>
                      <svg
                        aria-hidden="true"
                        class="shrink-0 w-4 h-4"
                        viewBox="0 0 20 20"
                      >
                        <path
                          d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                          fill="white"
                          stroke="var(--color-border-subtle)"
                          stroke-width="1"
                        />
                      </svg>
                      <svg
                        aria-hidden="true"
                        class="shrink-0 w-4 h-4"
                        viewBox="0 0 20 20"
                      >
                        <path
                          d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                          fill="white"
                          stroke="var(--color-border-subtle)"
                          stroke-width="1"
                        />
                      </svg>
                      <svg
                        aria-hidden="true"
                        class="shrink-0 w-4 h-4"
                        viewBox="0 0 20 20"
                      >
                        <path
                          d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                          fill="white"
                          stroke="var(--color-border-subtle)"
                          stroke-width="1"
                        />
                      </svg>
                      <svg
                        aria-hidden="true"
                        class="shrink-0 w-4 h-4"
                        viewBox="0 0 20 20"
                      >
                        <path
                          d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                          fill="white"
                          stroke="var(--color-border-subtle)"
                          stroke-width="1"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="space-y-3"
          >
            <div
              class="items-center gap-2"
            >
              <span
                aria-hidden="true"
                class="[&:not(:first-child)]:mt-6 text-left text-2xl font-bold text-card-foreground leading-[120%] tracking-[-0.6px]"
              >
                £99.99
              </span>
              <span
                aria-atomic="true"
                aria-live="polite"
                class="sr-only"
              >
                Men's Classic Deer Gloves
                 
                Current price: £99.99
              </span>
               
            </div>
          </div>
          <div
            aria-atomic="true"
            class="flex items-center gap-2"
            data-slot="inventory-message"
            role="status"
          >
            <span
              aria-hidden="true"
              class="h-2 w-2 shrink-0 rounded-full bg-current text-status-positive"
            />
            <p
              class="text-sm font-medium text-status-positive"
            >
              <span
                class="sr-only"
              >
                Available: 
              </span>
              In stock
            </p>
          </div>
          <div
            class="space-y-3"
          >
            <div
              aria-labelledby="swatch-group-label-_r_10_"
              class="inline-flex flex-col gap-3"
              role="radiogroup"
            >
              <div
                class="flex items-center gap-2 text-base font-semibold leading-6 text-card-foreground"
                id="swatch-group-label-_r_10_"
              >
                <span>
                  Size
                  :
                </span>
                <span>
                  L
                </span>
              </div>
              <div
                class="inline-flex flex-wrap gap-2 focus:outline-none bg-swatch-group-bg p-1"
                data-slot="swatch-container"
              >
                <a
                  aria-checked="false"
                  aria-label="M"
                  class="flex-shrink-0 relative group transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 min-w-8 min-h-8 px-3 py-1 cursor-pointer !w-auto !h-auto !min-w-[var(--swatch-labeled-min-size)] !min-h-[var(--swatch-labeled-min-size)] !p-[var(--swatch-labeled-padding)] bg-swatch-bg border border-swatch-border text-swatch-text shadow-2xs hover:border-[var(--swatch-color-border-hover,transparent)]"
                  data-labeled="true"
                  data-swatch-type="label"
                  href="/RefArchGlobal/en-GB/?accessorySize=050"
                  position="relative"
                  role="radio"
                  tabindex="-1"
                >
                  <div
                    class="flex items-center justify-center w-full h-full text-sm font-medium leading-5"
                    data-slot="swatch-content"
                  >
                    <span
                      class="text-xs font-medium"
                    >
                      M
                    </span>
                  </div>
                </a>
                <a
                  aria-checked="true"
                  aria-label="L"
                  class="flex-shrink-0 relative group transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 min-w-8 min-h-8 px-3 py-1 cursor-pointer !w-auto !h-auto !min-w-[var(--swatch-labeled-min-size)] !min-h-[var(--swatch-labeled-min-size)] !p-[var(--swatch-labeled-padding)] bg-swatch-bg-selected border border-swatch-border-selected text-swatch-text-selected shadow-2xs"
                  data-labeled="true"
                  data-swatch-type="label"
                  href="/RefArchGlobal/en-GB/?accessorySize=060"
                  position="relative"
                  role="radio"
                  tabindex="0"
                >
                  <div
                    class="flex items-center justify-center w-full h-full text-sm font-medium leading-5"
                    data-slot="swatch-content"
                  >
                    <span
                      class="text-xs font-medium"
                    >
                      L
                    </span>
                  </div>
                </a>
                <a
                  aria-checked="false"
                  aria-label="XL"
                  class="flex-shrink-0 relative group transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 min-w-8 min-h-8 px-3 py-1 cursor-pointer !w-auto !h-auto !min-w-[var(--swatch-labeled-min-size)] !min-h-[var(--swatch-labeled-min-size)] !p-[var(--swatch-labeled-padding)] bg-swatch-bg border border-swatch-border text-swatch-text shadow-2xs hover:border-[var(--swatch-color-border-hover,transparent)]"
                  data-labeled="true"
                  data-swatch-type="label"
                  href="/RefArchGlobal/en-GB/?accessorySize=080"
                  position="relative"
                  role="radio"
                  tabindex="-1"
                >
                  <div
                    class="flex items-center justify-center w-full h-full text-sm font-medium leading-5"
                    data-slot="swatch-content"
                  >
                    <span
                      class="text-xs font-medium"
                    >
                      XL
                    </span>
                  </div>
                </a>
              </div>
            </div>
          </div>
          <div
            class="space-y-2"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-base font-semibold leading-6 text-card-foreground"
              data-slot="label"
              for="quantity-_r_11_"
            >
              Quantity
            </label>
            <div
              aria-label="Quantity for Men's Classic Deer Gloves"
              class="inline-flex items-center border border-input rounded-ui overflow-hidden"
              role="group"
            >
              <button
                aria-label="Decrement Quantity for Men's Classic Deer Gloves"
                class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus-visible:outline-2 focus-visible:outline-offset-[-2px] disabled:opacity-50 disabled:cursor-not-allowed"
                data-testid="quantity-decrement"
                disabled=""
              >
                −
              </button>
              <input
                aria-describedby="quantity-_r_11_-inventory-msg"
                class="w-9 min-w-[2ch] text-center text-sm font-semibold leading-normal text-foreground border-0 bg-transparent focus-visible:outline-2 focus-visible:outline-offset-[-2px] disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
                id="quantity-_r_11_"
                min="1"
                step="1"
                type="number"
                value="1"
              />
              <button
                aria-label="Increment Quantity for Men's Classic Deer Gloves"
                class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus-visible:outline-2 focus-visible:outline-offset-[-2px] disabled:opacity-50 disabled:cursor-not-allowed"
                data-testid="quantity-increment"
              >
                +
              </button>
            </div>
            <p
              aria-live="polite"
              class="text-sm leading-none text-left text-destructive font-medium"
              id="quantity-_r_11_-inventory-msg"
              role="alert"
            >
              Out of stock for Men's Classic Deer Gloves
            </p>
          </div>
        </div>
        <div
          class="mt-6"
        >
          <div
            aria-atomic="true"
            role="status"
          />
          <div
            class="flex flex-col gap-3"
          >
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-10 rounded-ui px-6 has-[>svg]:px-4 w-full text-base font-semibold leading-6"
              data-size="lg"
              data-slot="add-to-cart-button"
              data-testid="add-to-cart"
              data-variant="default"
              disabled=""
            >
              Add to Cart
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductView stories snapshot > Playground story renders and matches snapshot 1`] = `
<div>
  <div
    class="section-container py-4"
  >
    <div
      class="grid grid-cols-1 lg:grid-cols-2 gap-4 lg:gap-12"
    >
      <div
        class="order-1"
      >
        <div
          class="space-y-4"
        >
          <div
            class="relative aspect-square overflow-hidden bg-muted"
            data-gallery-hero="true"
          >
            <div
              class="w-full h-full object-cover object-center [&_img]:object-contain! [&_img]:h-full! [&_img]:max-w-full! [&_img]:mx-auto!"
            >
              <picture>
                <source
                  media="(min-width: 1536px)"
                  sizes="680px"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70&sw=680 680w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70&sw=1360 1360w"
                  type="image/webp"
                />
                <source
                  media="(min-width: 1280px)"
                  sizes="50vw"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70&sw=768 768w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70&sw=1536 1536w"
                  type="image/webp"
                />
                <source
                  media="(min-width: 1024px)"
                  sizes="50vw"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70&sw=640 640w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70&sw=1280 1280w"
                  type="image/webp"
                />
                <source
                  media="(min-width: 768px)"
                  sizes="100vw"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70&sw=1024 1024w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70&sw=2048 2048w"
                  type="image/webp"
                />
                <source
                  media="(min-width: 640px)"
                  sizes="100vw"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70&sw=768 768w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70&sw=1536 1536w"
                  type="image/webp"
                />
                <source
                  sizes="100vw"
                  srcset="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70&sw=640 640w, https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70&sw=1280 1280w"
                  type="image/webp"
                />
                <img
                  alt="Men's Classic Deer Gloves, , large"
                  class="object-cover"
                  fetchpriority="high"
                  loading="eager"
                  src="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw5f194ed3/images/large/TG508_206.webp?sfrm=jpg&q=70"
                />
              </picture>
            </div>
          </div>
        </div>
        <details
          class="group border-b border-border mt-6"
          open=""
        >
          <summary
            class="flex items-center justify-between gap-4 py-4 text-base font-medium text-foreground cursor-pointer list-none [&::-webkit-details-marker]:hidden hover:bg-accent focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-foreground transition-colors"
          >
            <span
              class="flex items-center gap-2"
            >
              Description:
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-5 shrink-0 translate-y-0.5 transition-transform duration-200 group-open:rotate-180"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </summary>
          <div
            class="pb-4"
          >
            <div
              class="text-sm text-foreground [&_ul]:flex [&_ul]:flex-col [&_ul]:gap-1.5 [&_ul]:list-none [&_ul]:m-0 [&_ul]:p-0 [&_li]:flex [&_li]:items-center [&_li]:gap-2 [&_li]:before:content-[''] [&_li]:before:h-1.5 [&_li]:before:w-1.5 [&_li]:before:flex-shrink-0 [&_li]:before:rounded-full [&_li]:before:bg-foreground"
              data-testid="html-fragment"
            >
              <ul>
                <li>
                  Grain deerskin leather
                </li>
                <li>
                  Water resistant and durable
                </li>
                <li>
                  Outseam machine sewn
                </li>
              </ul>
            </div>
          </div>
        </details>
      </div>
      <div
        class="order-2"
      >
        <div
          class="relative grid gap-4"
        >
          <div
            class="flex items-start justify-between gap-4"
          >
            <div
              class="sm:pr-20 min-w-0"
            >
              <h1
                class="text-3xl font-bold text-card-foreground tracking-tight break-words"
                data-testid="product-title"
              >
                Men's Classic Deer Gloves
              </h1>
              <p
                class="mt-2 text-xs leading-none text-secondary-foreground"
              >
                SKU:
                 
                061492183589M
              </p>
              <p
                class="mt-2 text-base font-normal leading-6 text-accent-foreground"
              >
                These simple, stylish gloves have a great look and feel, with outseam construction for rugged character and select deerskin leather for premium quality. The fleece lining provides essential winter warmth, with a lightly tailored cuff for extra protection – featuring a Commerce Cloud grommet button for detail. A classic glove for men.
              </p>
            </div>
          </div>
          <div
            class="sm:absolute sm:top-0 sm:right-0 flex items-center gap-2 z-10"
          >
            <button
              aria-label="Add to Wishlist"
              class="absolute top-2 right-2 z-10 w-9 h-9 p-2 shadow-md flex items-center justify-center rounded-ui transition-all duration-200 ease-in-out cursor-pointer focus:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-60 disabled:cursor-not-allowed !static border border-border bg-background/90 hover:border-muted-foreground/50 hover:bg-background"
            >
              <svg
                aria-hidden="true"
                class="w-4 h-4 transition-all duration-200 ease-in-out text-muted-foreground scale-100"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
                viewBox="0 0 24 24"
              >
                <path
                  d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"
                />
              </svg>
            </button>
            <button
              aria-label="Share"
              class="w-9 h-9 p-2 shadow-md flex items-center justify-center rounded-ui transition-all duration-200 ease-in-out cursor-pointer focus:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 !static border border-border bg-background/90 hover:bg-background hover:border-muted-foreground/50 [&_svg]:stroke-[2]"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="w-4 h-4 text-muted-foreground transition-all duration-200 ease-in-out"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
                viewBox="0 0 24 24"
              >
                <path
                  d="M4 12v8a2 2 0 002 2h12a2 2 0 002-2v-8"
                />
                <polyline
                  points="16 6 12 2 8 6"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="2"
                  y2="15"
                />
              </svg>
            </button>
          </div>
          <div
            class="relative mt-2 inline-block"
          >
            <div
              aria-controls="radix-_r_2_"
              aria-haspopup="dialog"
              class="relative inline-block"
              data-slot="popover-trigger"
              data-state="closed"
              type="button"
            >
              <div
                class="flex items-center gap-2"
              >
                <div
                  class="flex flex-col gap-1"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    <div
                      aria-label="0 out of 5 stars, 0 reviews"
                      class="flex items-center gap-0.5"
                      role="group"
                    >
                      <svg
                        aria-hidden="true"
                        class="shrink-0 w-4 h-4"
                        viewBox="0 0 20 20"
                      >
                        <path
                          d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                          fill="white"
                          stroke="var(--color-border-subtle)"
                          stroke-width="1"
                        />
                      </svg>
                      <svg
                        aria-hidden="true"
                        class="shrink-0 w-4 h-4"
                        viewBox="0 0 20 20"
                      >
                        <path
                          d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                          fill="white"
                          stroke="var(--color-border-subtle)"
                          stroke-width="1"
                        />
                      </svg>
                      <svg
                        aria-hidden="true"
                        class="shrink-0 w-4 h-4"
                        viewBox="0 0 20 20"
                      >
                        <path
                          d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                          fill="white"
                          stroke="var(--color-border-subtle)"
                          stroke-width="1"
                        />
                      </svg>
                      <svg
                        aria-hidden="true"
                        class="shrink-0 w-4 h-4"
                        viewBox="0 0 20 20"
                      >
                        <path
                          d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                          fill="white"
                          stroke="var(--color-border-subtle)"
                          stroke-width="1"
                        />
                      </svg>
                      <svg
                        aria-hidden="true"
                        class="shrink-0 w-4 h-4"
                        viewBox="0 0 20 20"
                      >
                        <path
                          d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
                          fill="white"
                          stroke="var(--color-border-subtle)"
                          stroke-width="1"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="space-y-3"
          >
            <div
              class="items-center gap-2"
            >
              <span
                aria-hidden="true"
                class="[&:not(:first-child)]:mt-6 text-left text-2xl font-bold text-card-foreground leading-[120%] tracking-[-0.6px]"
              >
                £99.99
              </span>
              <span
                aria-atomic="true"
                aria-live="polite"
                class="sr-only"
              >
                Men's Classic Deer Gloves
                 
                Current price: £99.99
              </span>
               
            </div>
          </div>
          <div
            aria-atomic="true"
            class="flex items-center gap-2"
            data-slot="inventory-message"
            role="status"
          >
            <span
              aria-hidden="true"
              class="h-2 w-2 shrink-0 rounded-full bg-current text-status-positive"
            />
            <p
              class="text-sm font-medium text-status-positive"
            >
              <span
                class="sr-only"
              >
                Available: 
              </span>
              In stock
            </p>
          </div>
          <div
            class="space-y-3"
          >
            <div
              aria-labelledby="swatch-group-label-_r_8_"
              class="inline-flex flex-col gap-3"
              role="radiogroup"
            >
              <div
                class="flex items-center gap-2 text-base font-semibold leading-6 text-card-foreground"
                id="swatch-group-label-_r_8_"
              >
                <span>
                  Size
                  :
                </span>
                <span>
                  L
                </span>
              </div>
              <div
                class="inline-flex flex-wrap gap-2 focus:outline-none bg-swatch-group-bg p-1"
                data-slot="swatch-container"
              >
                <a
                  aria-checked="false"
                  aria-label="M"
                  class="flex-shrink-0 relative group transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 min-w-8 min-h-8 px-3 py-1 cursor-pointer !w-auto !h-auto !min-w-[var(--swatch-labeled-min-size)] !min-h-[var(--swatch-labeled-min-size)] !p-[var(--swatch-labeled-padding)] bg-swatch-bg border border-swatch-border text-swatch-text shadow-2xs hover:border-[var(--swatch-color-border-hover,transparent)]"
                  data-labeled="true"
                  data-swatch-type="label"
                  href="/RefArchGlobal/en-GB/?accessorySize=050"
                  position="relative"
                  role="radio"
                  tabindex="-1"
                >
                  <div
                    class="flex items-center justify-center w-full h-full text-sm font-medium leading-5"
                    data-slot="swatch-content"
                  >
                    <span
                      class="text-xs font-medium"
                    >
                      M
                    </span>
                  </div>
                </a>
                <a
                  aria-checked="true"
                  aria-label="L"
                  class="flex-shrink-0 relative group transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 min-w-8 min-h-8 px-3 py-1 cursor-pointer !w-auto !h-auto !min-w-[var(--swatch-labeled-min-size)] !min-h-[var(--swatch-labeled-min-size)] !p-[var(--swatch-labeled-padding)] bg-swatch-bg-selected border border-swatch-border-selected text-swatch-text-selected shadow-2xs"
                  data-labeled="true"
                  data-swatch-type="label"
                  href="/RefArchGlobal/en-GB/?accessorySize=060"
                  position="relative"
                  role="radio"
                  tabindex="0"
                >
                  <div
                    class="flex items-center justify-center w-full h-full text-sm font-medium leading-5"
                    data-slot="swatch-content"
                  >
                    <span
                      class="text-xs font-medium"
                    >
                      L
                    </span>
                  </div>
                </a>
                <a
                  aria-checked="false"
                  aria-label="XL"
                  class="flex-shrink-0 relative group transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 min-w-8 min-h-8 px-3 py-1 cursor-pointer !w-auto !h-auto !min-w-[var(--swatch-labeled-min-size)] !min-h-[var(--swatch-labeled-min-size)] !p-[var(--swatch-labeled-padding)] bg-swatch-bg border border-swatch-border text-swatch-text shadow-2xs hover:border-[var(--swatch-color-border-hover,transparent)]"
                  data-labeled="true"
                  data-swatch-type="label"
                  href="/RefArchGlobal/en-GB/?accessorySize=080"
                  position="relative"
                  role="radio"
                  tabindex="-1"
                >
                  <div
                    class="flex items-center justify-center w-full h-full text-sm font-medium leading-5"
                    data-slot="swatch-content"
                  >
                    <span
                      class="text-xs font-medium"
                    >
                      XL
                    </span>
                  </div>
                </a>
              </div>
            </div>
          </div>
          <div
            class="mt-6"
          >
            <div
              class="space-y-4"
            >
              <div
                class="w-full"
              >
                <div
                  aria-required="false"
                  class="grid grid-cols-2 gap-2"
                  data-slot="radio-group"
                  data-testid="delivery-option-select"
                  dir="ltr"
                  role="radiogroup"
                  style="outline: none;"
                  tabindex="0"
                >
                  <label
                    class="text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-start gap-2 rounded-ui p-3 border transition-colors text-left shadow-xs cursor-pointer border-muted-foreground/20 hover:border-primary/50"
                    data-slot="label"
                    for="delivery-option-061492183589M"
                  >
                    <button
                      aria-checked="false"
                      class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-ui transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 sr-only"
                      data-radix-collection-item=""
                      data-slot="radio-group-item"
                      data-state="unchecked"
                      id="delivery-option-061492183589M"
                      role="radio"
                      tabindex="-1"
                      type="button"
                      value="delivery"
                    />
                    <div
                      class="mt-0.5 shrink-0"
                    >
                      <div
                        class="w-4 h-4 border-2 flex items-center justify-center transition-colors border-muted-foreground/20"
                      />
                    </div>
                    <div
                      class="flex-1 min-w-0"
                    >
                      <div
                        class="flex flex-col"
                      >
                        <span
                          class="text-sm font-medium leading-none text-foreground"
                        >
                          Deliver to
                        </span>
                        <p
                          class="text-xs font-normal leading-4 tracking-[0.12px] text-muted-foreground mt-0.5"
                        >
                          Enter ZIP code to see delivery estimate
                        </p>
                      </div>
                    </div>
                  </label>
                  <label
                    class="text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 flex items-start gap-2 rounded-ui p-3 border transition-colors text-left shadow-xs border-muted-foreground/20 hover:border-primary/50 opacity-50 cursor-not-allowed"
                    data-slot="label"
                    for="pickup-option-061492183589M"
                  >
                    <button
                      aria-checked="false"
                      class="border-input text-primary focus-visible:border-ring focus-visible:ring-ring aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 aspect-square size-4 shrink-0 rounded-full border shadow-ui transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 sr-only"
                      data-disabled=""
                      data-radix-collection-item=""
                      data-slot="radio-group-item"
                      data-state="unchecked"
                      disabled=""
                      id="pickup-option-061492183589M"
                      role="radio"
                      tabindex="-1"
                      type="button"
                      value="pickup"
                    />
                    <div
                      class="mt-0.5 shrink-0"
                    >
                      <div
                        class="w-4 h-4 border-2 flex items-center justify-center transition-colors border-muted-foreground/20"
                      />
                    </div>
                    <div
                      class="flex-1 min-w-0"
                    >
                      <div
                        class="flex flex-col"
                      >
                        <span
                          class="text-sm font-medium leading-none text-foreground"
                        >
                          Pickup unavailable at
                        </span>
                        <div
                          class="mt-0.5"
                        >
                          <button
                            class="text-xs text-primary hover:underline cursor-pointer"
                            type="button"
                          />
                          <p
                            class="text-xs font-normal text-destructive mt-1"
                          >
                            Try another store
                          </p>
                        </div>
                      </div>
                    </div>
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            class="space-y-2"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-base font-semibold leading-6 text-card-foreground"
              data-slot="label"
              for="quantity-_r_b_"
            >
              Quantity
            </label>
            <div
              aria-label="Quantity for Men's Classic Deer Gloves"
              class="inline-flex items-center border border-input rounded-ui overflow-hidden"
              role="group"
            >
              <button
                aria-label="Decrement Quantity for Men's Classic Deer Gloves"
                class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus-visible:outline-2 focus-visible:outline-offset-[-2px] disabled:opacity-50 disabled:cursor-not-allowed"
                data-testid="quantity-decrement"
                disabled=""
              >
                −
              </button>
              <input
                class="w-9 min-w-[2ch] text-center text-sm font-semibold leading-normal text-foreground border-0 bg-transparent focus-visible:outline-2 focus-visible:outline-offset-[-2px] disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
                id="quantity-_r_b_"
                min="1"
                step="1"
                type="number"
                value="1"
              />
              <button
                aria-label="Increment Quantity for Men's Classic Deer Gloves"
                class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus-visible:outline-2 focus-visible:outline-offset-[-2px] disabled:opacity-50 disabled:cursor-not-allowed"
                data-testid="quantity-increment"
              >
                +
              </button>
            </div>
          </div>
        </div>
        <div
          class="mt-6"
        >
          <div
            aria-atomic="true"
            role="status"
          />
          <div
            class="flex flex-col gap-3"
          >
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-ui transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-10 rounded-ui px-6 has-[>svg]:px-4 w-full text-base font-semibold leading-6"
              data-size="lg"
              data-slot="add-to-cart-button"
              data-testid="add-to-cart"
              data-variant="default"
            >
              Add to Cart
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
